# falcon

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml  test_model.falcon
.github/workflows/: pages.yml  pypi-deploy.yml
docs/: intro.html  search.html  searchindex.js  sphinx_req.txt
docs/.doctrees/: api.doctree  environment.pickle  high_level_api.doctree  index.doctree  intro.doctree
docs/_sources/: intro.rst.txt
docs/abstract/: onnx.html
docs/docs_build/: .buildinfo  api.html  available_configurations.html  genindex.html  high_level_api.html  index.html  intro.html  objects.inv  registry.html  search.html  searchindex.js  sklearn_api.html
docs/source/: api.rst  conf.py  index.rst  intro.rst  registry.rst
docs_source/source/: intro.rst
falcon/: __init__.py  config.py  constants.py  datasets.py  main.py  runtime.py  serialization.py  sklapi.py  task_configurations.py  type_guessing.py  types.py  utils.py
falcon/abstract/: __init__.py  learner.py  model.py  onnx_convertible.py  optuna.py  processor.py  task_manager.py  task_pipeline.py
falcon/tabular/: __init__.py  configurations.py  reporting.py  tabular_manager.py  utils.py  wrappers.py
html/: genindex.html  high_level_api.html  index.html  intro.html  objects.inv
html/.doctrees/: api.doctree  environment.pickle  high_level_api.doctree  index.doctree  intro.doctree
html/_sources/: high_level_api.rst.txt
html/abstract/: index.html  model.html  pipeline.html  pipeline_element.html
tests/: test_datasets.py  test_main.py  test_sklapi.py  test_type_guessing.py
tests/manual/: scaler.py  (+1 more)
(+148 files in other folders)
