[build-system]

requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
"skl2onnx>=1.12.0",
"scikit-learn>=1.1.0",
"numpy>=1.18.0",
"onnx>=1.12.0",
"onnxruntime>=1.12.1",
"pandas>=1.0.0", 
"imbalanced-learn>=0.8.1",
"pyarrow>=8.0.0",
"optuna>=3.0.0", 
"packaging>=20.0.0"
]
name = "falcon-ml"
version = "0.6.0"
authors = [
  { name="Oleg Kostromin", email="kostromin97@gmail.com" },
  { name="Iryna Kondrashchenko", email="iryna230520@gmail.com" },
  { name="Marco Pasini", email="marco.pasini.98@gmail.com" },
]
description = "AutoML library for fast experementations."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.pytest.ini_options]
pythonpath = [
  "."
]